@@ -1,4 +1,5 @@
-﻿07/05/2019: Word replacement first attempt
+﻿09/05/2019: Word replacement history
+07/05/2019: Word replacement first attempt
 06/05/2019: Unknown supports edition for Europresse
 03/05/2019: Filter in folders
 02/05/2019: html extensions for Europresse, prc encoding an no empty theme in Filter
